2007-07-24  Sven Neumann  <sven@gimp.org>

	* authors.xml: added Stefan Röllin.

	* AUTHORS: regenerated.

	* plug-ins/print/print-page-layout.c: applied patch from Stefan
	Röllin to restore image offsets (bug #387604).

2007-07-24  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print-draw-page.c (create_surface_from_rgba):
	use integer arithmetic to do the compositing.

2007-07-24  Sven Neumann  <sven@gimp.org>

	* INSTALL
	* configure.in
	* app/gui/gui.c: depend on gtk+ >= 2.10.13. Fixes bug #436242.

	* configure.in: no need to AC_SUBST() GIMP_API_VERSION twice.

2007-07-24  Sven Neumann  <sven@gimp.org>

	* plug-ins/imagemap/imap_main.c (main_set_title): use
	g_filename_display_basename() instead of g_path_get_basename().

2007-07-24  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print.c: set a print job name.

2007-07-24  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print.c: if we created an export image, delete
	it as soon as possible so it isn't left behind if the user kills
	the plug-in later because of printer problems.

2007-07-23  Mukund Sivaraman  <muks@mukund.org>

	* README: Use ~/.gimp-2.3 instead of ~/.gimp-2.2.

2007-07-23  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print.[ch]
	* plug-ins/print/print-page-layout.c
	* plug-ins/print/print-settings.[ch]: removed image_ID from the
	PrintData struct and made sure that the parasites are read from
	and attached to the original image, not the export image.

2007-07-23  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print.c: don't add an alpha channel.

	* plug-ins/print/print-draw-page.c: always use CAIRO_FORMAT_RGB24.

2007-07-23  Sven Neumann  <sven@gimp.org>

	* app/core/gimpprojection-construct.c: minor code cleanup.

2007-07-23  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print.c (print_image): only delete the image if
	gimp_export_image() actually created a new one.

	* plug-ins/print/print-page-layout.c: some more dialog layout tweaks.
