@@ -1,5 +1,9 @@
 2007-07-24  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/print/print-page-layout.c: string changes.
+
+2007-07-24  Sven Neumann  <sven@gimp.org>
+
 	* authors.xml: added Stefan Röllin.
 
 	* AUTHORS: regenerated.
